# graphql-ruby

./: .codeclimate.yml  .gitattributes  .gitignore  .herb.yml  .nojekyll  .octocov.yml  .rubocop.yml  .travis.yml  .yardopts  1-1b306fad3b6b35dd06248028883cd8a3ec4bdefd.txt  1-baseline.txt  2-1b6cd5a0299261f5f10699b02df543354402d63a.txt  2-tail-position.txt  3-65edb652b9dffceab73f1064b4631654ba49a544.txt  3-bounce.txt  4-c3549b3e8.txt  AUTHORS  Allwareux®™  Appraisals  CHANGELOG-enterprise.md  CHANGELOG-pro.md  CHANGELOG.md  CHANGELOG_graphql-relay.md  CNAME  Dockerfile  Gemfile  Guardfile  LICENSE.md  MIT-LICENSE  README.md  Rakefile  Readme.md  SECURITY.md  Untitled  _config.yml  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  (+33 more)
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: contributing.md
__tests__/: indexTest.js  syncTest.js
authorization/: accessibility.html  authorization.html  can_can_integration.html  overview.html  pundit_integration.html  scoping.html  visibility.html
benchmark/: batch_loading.rb  big_schema.graphql  compare_validation.rb  complexity.rb  parser_benchmark.rb  run.rb  schema.graphql
changesets/: definition.html  installation.html  overview.html  releases.html
class_based_api/: object_types.html
cop/: context_is_passed_cop.rb  no_focus_cop.rb  none_without_block_cop.rb
rust_graphql_parser/ext/rust_graphql_parser/: Cargo.toml  extconf.rb
rust_graphql_parser/ext/rust_graphql_parser/src/: lib.rs  translation.rs
site/: Rules  (+1 more)
(+120865 files in other folders)
